--- a/kibana/config/kibana.yml
+++ b/kibana/config/kibana.yml
@@ -11,8 +11,10 @@ monitoring.ui.container.logstash.enabled: true
 
 ## Security credentials
 #
-# elasticsearch.username: kibana_system
+elasticsearch.username: kibana_system
 # elasticsearch.password: ${KIBANA_SYSTEM_PASSWORD}
+# elasticsearch.password: Vpfy02SyaD*e9_RK53ph
+elasticsearch.password: kibana
 
 ## Encryption keys (optional but highly recommended)
 ##
@@ -22,11 +24,7 @@ monitoring.ui.container.logstash.enabled: true
 ##
 ## https://www.elastic.co/docs/deploy-manage/security/self-setup
 ## https://www.elastic.co/docs/reference/kibana/commands/kibana-encryption-keys
-#
-#xpack.security.encryptionKey:
-#xpack.encryptedSavedObjects.encryptionKey:
-#xpack.reporting.encryptionKey:
-
+# 
 xpack.encryptedSavedObjects.encryptionKey: 17c3fc612cf5489b114f098b84dad873
 xpack.reporting.encryptionKey: 7dc89d9ba076215c17b04b0cd1efb792
 xpack.security.encryptionKey: ce21d631c786c32cc16491628cac255e
