--- a/logstash/pipeline/logstash.conf
+++ b/logstash/pipeline/logstash.conf
@@ -18,10 +18,11 @@
 # 	}
 # }
 
+###########
 # Custom logstash.conf for PCAP C2 Analysis Pipeline
 input {
   file {
-    path => "/usr/share/logstash/input_data/c2_analysis.json"
+    path => "/usr/share/logstash/logstash-input/traffic-analyse.json"
     start_position => "beginning"
     sincedb_path => "/usr/share/logstash/data/sincedb_c2"
     mode => "tail"
@@ -53,10 +54,14 @@ filter {
 output {
   elasticsearch {
     hosts => ["http://elasticsearch:9200"]
-    index => "pcap-c2-analysis-%{+YYYY.MM.dd}"
-    # user => "logstash_internal"
+    data_stream => "true"
+    # index => "pcap-c2-analysis"
+    user => "logstash_internal"
+    data_stream_type => "logs"
+    data_stream_dataset => "pcap_c2"
+    data_stream_namespace => "default"
     # password => "${LOGSTASH_INTERNAL_PASSWORD}"
-    # password => "GXD5YKdLzyhiidmbgsRb"
+    password => "logstash"
   }
   
   # Optional: Output to stdout for debugging purposes
