--- a/logstash/pipeline/logstash.conf
+++ b/logstash/pipeline/logstash.conf
@@ -10,10 +10,10 @@ input {
 }
 
 filter {
-  # Chỉ xử lý các sự kiện flow của Suricata hoặc conn của Zeek
+  # Process only Suricata flow or Zeek conn events
   if ("suricata.eve.flow" in [tags]) or ([event][dataset] == "zeek.conn") {
 
-    # Chuẩn hóa các trường IP và bytes
+    # Normalize fields
     if "suricata.eve.flow" in [tags] {
       mutate {
         rename => {
@@ -34,7 +34,7 @@ filter {
       }
     }
 
-    # Tạo một ID duy nhất, có hướng cho cặp kết nối
+    # Add a unique connection pair ID
     mutate {
       add_field => { "connection_pair_id" => "%{source_ip}-%{destination_ip}" }
     }
@@ -42,12 +42,13 @@ filter {
     aggregate {
       task_id => "%{connection_pair_id}"
       code => "
+        # Initialize values
         map['connection_count'] ||= 0
         map['connection_count'] += 1
+
         map['source_ip'] ||= event.get('source_ip')
         map['destination_ip'] ||= event.get('destination_ip')
 
-        # Initialize arrays
         map['timestamps'] ||= []
         map['timestamps'] << event.get('@timestamp').to_i
 
@@ -59,13 +60,12 @@ filter {
 
         # Cancel original event
         event.cancel()
-"
+      "
       push_map_as_event_on_timeout => true
-      timeout => 3600 # Timeout cứng 1 giờ
-      inactivity_timeout => 600 # Timeout 10 phút không hoạt động
+      timeout => 300 # Hard timeout 5 min
+      inactivity_timeout => 30 # Inactivity timeout 30 sec
       timeout_task_id_field => "connection_pair"
       timeout_code => "
-        # Tính toán khoảng thời gian giữa các timestamp liên tiếp
         intervals = []
         if event.get('timestamps') && event.get('timestamps').length > 1
           sorted_ts = event.get('timestamps').sort
@@ -73,13 +73,13 @@ filter {
         end
         event.set('beacon_intervals', intervals)
 
-        # Tính toán các chỉ số thống kê
+        # Compute stats
         if intervals.any?
           sum = intervals.inject(0){|sum,x| sum + x }
           mean = sum / intervals.length.to_f
           event.set('beacon_avg_interval', mean)
 
-          # Tính Jitter (Độ lệch chuẩn - Standard Deviation)
+          # Jitter = standard deviation
           sum_sq_diff = intervals.map { |x| (x - mean) ** 2 }.inject(0, :+)
           std_dev = Math.sqrt(sum_sq_diff / intervals.length.to_f)
           event.set('beacon_jitter', std_dev)
@@ -87,15 +87,16 @@ filter {
           event.set('beacon_avg_interval', 0)
           event.set('beacon_jitter', 0)
         end
-        
-        # Tính toán thống kê payload
+
+        # Bytes stats
         if event.get('source_bytes') && event.get('source_bytes').any?
-            event.set('avg_source_bytes', event.get('source_bytes').sum / event.get('source_bytes').length.to_f)
+          event.set('avg_source_bytes', event.get('source_bytes').sum / event.get('source_bytes').length.to_f)
         end
         if event.get('destination_bytes') && event.get('destination_bytes').any?
-            event.set('avg_destination_bytes', event.get('destination_bytes').sum / event.get('destination_bytes').length.to_f)
+          event.set('avg_destination_bytes', event.get('destination_bytes').sum / event.get('destination_bytes').length.to_f)
         end
-        
+
+        # Cleanup
         event.remove('timestamps')
         event.remove('source_bytes')
         event.remove('destination_bytes')
@@ -107,22 +108,28 @@ filter {
 
 
 
+
 output {
-  elasticsearch {
-    hosts => ["elasticsearch:9200"]
-    user => "logstash_internal"
-    password => "logstash"
-    # index => "filebeat-%{+YYYY.MM.dd}"
-    data_stream => "true"
-    data_stream_dataset => "suricata"
-    data_stream_namespace => "default"
+  if "_aggregate_timeout" in [tags] {
+    elasticsearch {
+      hosts => ["elasticsearch:9200"]
+      user => "logstash_internal"
+      password => "logstash"
+      index => "pcap-c2-analysis"
+    }
+  } else {
+    elasticsearch {
+      hosts => ["elasticsearch:9200"]
+      user => "logstash_internal"
+      password => "logstash"
+      data_stream => "true"
+      data_stream_dataset => "suricata"
+      data_stream_namespace => "default"
+    }
   }
 
-  stdout {
-    codec => rubydebug
-  }
+  stdout { codec => rubydebug }
 }
-
 
 ###########
 # Custom logstash.conf for PCAP C2 Analysis Pipeline
