--- a/.env
+++ b/.env
@@ -26,7 +26,7 @@ KIBANA_SYSTEM_PASSWORD='kibana'
 # The users Beats use to connect and send data to Elasticsearch.
 # https://www.elastic.co/guide/en/beats/metricbeat/current/feature-roles.html
 METRICBEAT_INTERNAL_PASSWORD=''
-FILEBEAT_INTERNAL_PASSWORD=''
+FILEBEAT_INTERNAL_PASSWORD='filebeat'
 HEARTBEAT_INTERNAL_PASSWORD=''
 
 # User 'monitoring_internal' (custom)
@@ -40,3 +40,6 @@ MONITORING_INTERNAL_PASSWORD=''
 # The user the Beats use when storing monitoring information in Elasticsearch.
 # https://www.elastic.co/guide/en/elasticsearch/reference/current/built-in-users.html
 BEATS_SYSTEM_PASSWORD=''
+
+# User 'analyzer_internal' (custom)
+ANALYZER_INTERNAL_PASSWORD='analyzer'
