--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -35,6 +35,7 @@ services:
       HEARTBEAT_INTERNAL_PASSWORD: ${HEARTBEAT_INTERNAL_PASSWORD:-}
       MONITORING_INTERNAL_PASSWORD: ${MONITORING_INTERNAL_PASSWORD:-}
       BEATS_SYSTEM_PASSWORD: ${BEATS_SYSTEM_PASSWORD:-}
+      ANALYZER_INTERNAL_PASSWORD: ${ANALYZER_INTERNAL_PASSWORD:-}
     network_mode: service:elasticsearch
     depends_on:
       - elasticsearch
@@ -84,30 +85,30 @@ services:
       - elk
     restart: unless-stopped
 
-  logstash:
-    container_name: logstash
-    build:
-      context: logstash/
-      args:
-        ELASTIC_VERSION: ${ELASTIC_VERSION}
-    volumes:
-      - ./logstash/config/logstash.yml:/usr/share/logstash/config/logstash.yml:ro,Z
-      - ./logstash/pipeline:/usr/share/logstash/pipeline:ro,Z
-      - ./logstash-input:/usr/share/logstash/logstash-input:ro,Z
-    ports:
-      - 5044:5044
-      - 50000:50000/tcp
-      - 50000:50000/udp
-      # - 9600:9600
-    environment:
-      LS_JAVA_OPTS: -Xms256m -Xmx256m
-      LOGSTASH_INTERNAL_PASSWORD: ${LOGSTASH_INTERNAL_PASSWORD:-}
-    networks:
-      - elk
-    depends_on:
-      - elasticsearch
-    restart: unless-stopped
-    command: ["logstash", "--pipeline.workers", "1"]
+  # logstash:
+  #   container_name: logstash
+  #   build:
+  #     context: logstash/
+  #     args:
+  #       ELASTIC_VERSION: ${ELASTIC_VERSION}
+  #   volumes:
+  #     - ./logstash/config/logstash.yml:/usr/share/logstash/config/logstash.yml:ro,Z
+  #     - ./logstash/pipeline:/usr/share/logstash/pipeline:ro,Z
+  #     - ./logstash-input:/usr/share/logstash/logstash-input:ro,Z
+  #   ports:
+  #     - 5044:5044
+  #     - 50000:50000/tcp
+  #     - 50000:50000/udp
+  #     # - 9600:9600
+  #   environment:
+  #     LS_JAVA_OPTS: -Xms256m -Xmx256m
+  #     LOGSTASH_INTERNAL_PASSWORD: ${LOGSTASH_INTERNAL_PASSWORD:-}
+  #   networks:
+  #     - elk
+  #   depends_on:
+  #     - elasticsearch
+  #   restart: unless-stopped
+  #   # command: ["logstash", "--pipeline.workers", "1"]
 
   kibana:
     container_name: kibana
@@ -144,7 +145,23 @@ services:
       - elk
     depends_on:
       - elasticsearch
-      - logstash
+      # - logstash
+    restart: unless-stopped
+    command: ["-c", "/usr/share/filebeat/filebeat.yml", "-e", "--strict.perms=false", "setup", "--pipelines", "ingest-zeek-conn", "filebeat", "modules", "enable", "zeek", "ingest-zeek-conn"]
+
+
+  analyzer:
+    container_name: analyzer
+    build:
+      context: analyzer/
+    environment:
+      ELASTIC_HOST: elasticsearch
+      ANALYZER_USER: analyzer_internal
+      ANALYZER_PASSWORD: ${ANALYZER_INTERNAL_PASSWORD:-}
+    networks:
+      - elk
+    depends_on:
+      - elasticsearch
     restart: unless-stopped
 
 networks:
