--- a/extensions/filebeat/Dockerfile
+++ b/extensions/filebeat/Dockerfile
@@ -1,3 +1,7 @@
 ARG ELASTIC_VERSION
 
 FROM docker.elastic.co/beats/filebeat:${ELASTIC_VERSION:-9.1.2}
+
+# Enable the Zeek module
+RUN filebeat modules enable zeek
+
