--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,7 @@ services:
   # '--profile=setup' CLI flag to Compose commands, or "up" the service by name
   # such as 'docker compose up setup'.
   setup:
+    container_name: setup
     profiles:
       - setup
     build:
@@ -162,6 +163,9 @@ services:
     depends_on:
       - elasticsearch
     restart: unless-stopped
+
+  # zeek:
+
 
 networks:
   elk:
